export const TEST_IDS = {
  INPUT_USER: "login/input_user",
  INPUT_PASS: "login/input_pass",
} as const;
