export const TEST_IDS = {
  INPUT_USER: "register/input_user",
  INPUT_PASS: "register/input_pass",
} as const;
