export const TEST_IDS = {
  INPUT_NAME: "create_product/input_name",
  INPUT_QNT: "create_product/input_qnt",
  INPUT_QNT_DECREMENT: "create_product/input_qnt_decrement",
  INPUT_QNT_INCREMENT: "create_product/input_qnt_increment",
  INPUT_UNIT: "create_product/input_unit",
  INPUT_TOTAL: "create_product/input_total",
} as const;
